# raceSim

./: .gitignore  Cargo.toml
src/: colors.rs  lib.rs  main.rs  race.rs  render.rs
src/race/: car.rs  track.rs
