[package]
name = "racetrack_simulator"
version = "0.1.0"
edition = "2021"
authors = ["Jaxson Pahukula"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#piston = "0.55.0"
#piston2d-graphics = "0.44.0"
#pistoncore-glutin_window = "0.72.0"
#piston2d-opengl_graphics = "0.83.0"
blue_engine = "0.5.7"
rand = "0.8.5"
nalgebra = "0.32.3"
image = "0.24.8"
